force-app/main/default/objects/Credit_Card__c/Credit_Card__c.object-meta.xml
<CustomObject>
    <label>Credit Card</label>
    <nameField>
        <label>Credit Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>