force-app/main/default/objects/Credit_Card__c/fields/CVV__c.field-meta.xml
<CustomField>
    <fullName>CVV__c</fullName>
    <label>CVV</label>
    <length>6</length>
    <type>Text</type>
</CustomField>