force-app/main/default/objects/Credit_Card__c/fields/Expiring_On__c.field-meta.xml
<CustomField>
    <fullName>Expiring_On__c</fullName>
    <label>Expiring On</label>
    <type>Date</type>
</CustomField>